--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "government.github.com",
+  "name": "kemoio.github.io",
   "version": "0.0.1",
-  "homepage": "https://government.github.com/",
+  "homepage": "https://kemoio.github.io/",
   "authors": [
     "GitHub, Inc."
   ],
