--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "GitHub and Government"
 description: "GitHub helps government build software better, together"
 permalink: "/stories/:title"
-url: https://government.github.com
+url: https://kemoio.github.io
 relative_permalinks: false
 analytics_account: "UA-3769691-28"
 
